se agregan instrucciones de ejecucion