@@ -3,3 +3,11 @@
 Paradigmas de programacion, Juego Arcade, Politecnico grancolombiano
 
 diseño https://www.figma.com/file/rxSm0ccZm74kicFtIY3PSV/Dise%C3%B1o-Juego-preguntados?type=design&node-id=0-1&t=XHrbLI4D5Hxslail-0
+
+para ejecutar el proyecto se requiere Java instalado y el jdk de JAVA FX 
+
+https://openjfx.io/openjfx-docs/#install-java
+
+Luego de descargar se puede dirigir a la carpeta EnigmaGame/Target abrir el CMD y correr el comando
+
+java --module-path "path\Java\javafx-sdk-20.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar EnigmaGame.jar
